@@ -2,15 +2,14 @@ package com.pada.learnproject.example.service;
 
 import static com.pada.learnproject.example.repository.ExampleEntityRepository.Specs.byNameLike;
 import static com.pada.learnproject.example.repository.ExampleEntityRepository.Specs.byValue;
-import static java.util.stream.Collectors.toList;
 
 import com.pada.learnproject.example.domain.ExampleCriteria;
 import com.pada.learnproject.example.domain.ExampleEntity;
 import com.pada.learnproject.example.repository.ExampleEntityRepository;
 import com.pada.learnproject.example.service.dto.request.ManyToManyRequest;
 import com.pada.learnproject.example.service.dto.request.ManyToOneRequest;
-import com.pada.learnproject.example.service.dto.response.ExampleListResponse;
 import com.pada.learnproject.example.service.dto.request.ExampleRequest;
+import com.pada.learnproject.example.service.dto.response.ExampleListResponse;
 import com.pada.learnproject.example.service.dto.response.ExampleListWrapperResponse;
 import com.pada.learnproject.example.service.dto.response.ExampleResponse;
 import com.pada.learnproject.example.service.mapper.ExampleEntityMapper;
@@ -41,7 +40,7 @@ public class ExampleService {
         List<ExampleListResponse> data = exampleEntityPage
             .stream()
             .map(exampleEntityMapper::toListResponse)
-            .collect(toList());
+            .toList();
 
         return new ExampleListWrapperResponse(data);
     }
